# openusage-windows

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TRADEMARK.md  bunfig.toml  components.json  conductor.json  copy-bundled.cjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.codex/environments/: environment.toml
.cursor/: worktrees.json
.cursor/commands/: pr-review.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  new_provider.yml
.github/workflows/: ci.yml  labeler.yml  publish.yml  stale.yml
docs/: app-state-architecture.md  capture-logs.md  local-http-api.md  proxy.md  retirement-notice.md
docs/plugins/: api.md  schema.md
docs/providers/: amp.md  antigravity.md  claude.md  codex.md  copilot.md  cursor.md  devin.md  factory.md  grok.md  jetbrains-ai-assistant.md  kimi.md  kiro.md  minimax.md  opencode-go.md  perplexity.md  synthetic.md  zai.md
plugins/: test-helpers.js
plugins/amp/: plugin.js  plugin.json  plugin.test.js
plugins/antigravity/: plugin.js  plugin.json  plugin.test.js
plugins/claude/: plugin.ccusage.test.js  plugin.js  plugin.json  plugin.test.js
plugins/codex/: plugin.ccusage.test.js  plugin.js  plugin.json  plugin.reset-credits.test.js  plugin.test.js
plugins/copilot/: plugin.js  plugin.json  plugin.test.js
plugins/cursor/: plugin.js  plugin.json  plugin.test.js
plugins/devin/: plugin.js  plugin.json  plugin.test.js
plugins/factory/: plugin.js  plugin.json  plugin.test.js
plugins/grok/: plugin.js  plugin.json  plugin.test.js
plugins/jetbrains-ai-assistant/: plugin.js  plugin.json  plugin.test.js
plugins/kimi/: plugin.js  plugin.json  plugin.test.js
plugins/kiro/: plugin.js  plugin.json  plugin.test.js
plugins/minimax/: plugin.js  plugin.json  plugin.test.js
plugins/mock/: plugin.js  plugin.json  plugin.test.js
plugins/opencode-go/: plugin.js  plugin.json  plugin.test.js
plugins/perplexity/: plugin.js  plugin.json  plugin.test.js
plugins/synthetic/: plugin.js  plugin.json  plugin.test.js
plugins/zai/: plugin.js  plugin.json  plugin.test.js
scripts/: build-release.sh  bump-ccusage-version.mjs
src/: App.test.tsx  App.tsx  index.css  main.test.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/Icon.icon/: icon.json
src-tauri/src/: app_nap.rs  config.rs  lib.rs  log_path.rs  main.rs  panel.rs  tray.rs  webkit_config.rs
src-tauri/src/local_http_api/: cache.rs  mod.rs  server.rs
src-tauri/src/plugin_engine/: host_api.rs  manifest.rs  mod.rs  runtime.rs
src/components/: about-dialog.test.tsx  about-dialog.tsx  changelog-dialog.test.tsx  changelog-dialog.tsx  global-shortcut-section.test.tsx  global-shortcut-section.tsx  panel-footer.test.tsx  panel-footer.tsx  plugin-error.test.tsx  plugin-error.tsx  provider-card.test.tsx  provider-card.tsx  retirement-notice.test.tsx  retirement-notice.tsx  side-nav.test.tsx  side-nav.tsx  skeleton-lines.test.tsx  skeleton-lines.tsx  usage-sparkline.test.tsx  usage-sparkline.tsx
src/hooks/: use-app-update.test.ts  use-app-update.ts  use-changelog.test.tsx  use-changelog.ts  use-dark-mode.test.ts  use-dark-mode.ts  use-now-ticker.test.ts  use-now-ticker.ts  (+2 more)
(+78 files in other folders)
