[package]
name = "openusage"
version = "0.6.37"
description = "OpenUsage is an open source AI subscription limit tracker"
authors = ["mesomya"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "openusage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3.47", features = ["formatting"] }
dirs = "6"
log = "0.4"
libc = "0.2"
# Use native TLS (SChannel on Windows, Secure Transport on macOS) instead of the
# default rustls+aws-lc-rs stack, which would otherwise require NASM and CMake to
# build the aws-lc C library on Windows. SChannel is the OS-native TLS provider.
reqwest = { version = "0.13", default-features = false, features = ["blocking", "socks", "native-tls", "http2", "charset"] }
# QuickJS engine. Upstream enables the `bindgen` feature, which regenerates the
# C bindings at build time and so requires libclang. To keep the Windows build
# dependency-light we rely on the crate's pre-generated bindings for the
# standard targets instead — purely a build-time detail; runtime is identical.
rquickjs = { version = "0.12", features = [] }
# Embedded SQLite. Replaces the macOS `sqlite3` CLI shell-out so provider
# plugins that read SQLite databases (Cursor, Kiro, Antigravity, ...) work on
# every platform with no external binary. `bundled` compiles SQLite from source.
rusqlite = { version = "0.40", features = ["bundled"] }
tauri-plugin-store = "2.4.3"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2.3.2"
# native-tls (not the default rustls) to match reqwest above and avoid aws-lc-sys.
# `zip` is kept (default) so Windows updater archives still extract.
tauri-plugin-updater = { version = "2", default-features = false, features = ["native-tls", "zip"] }
tauri-plugin-process = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
regex-lite = "0.1.9"
aes-gcm = "0.10.3"
sha2 = "0.11"

# macOS-only. The menu-bar panel uses tauri-nspanel (an NSPanel wrapper); on
# Windows/Linux the panel is a regular always-on-top borderless WebviewWindow
# instead (see src/panel.rs). objc2* back the App Nap / WebKit tweaks.
[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSProcessInfo", "NSString"] }
objc2-app-kit = { version = "0.3", features = ["NSEvent", "NSScreen", "NSGraphics"] }
objc2-web-kit = { version = "0.3", features = ["WKPreferences", "WKWebView", "WKWebViewConfiguration"] }

[dev-dependencies]
serial_test = "3.5.0"
